move index.html to root folder

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="container">
             <h1>AJ!</h1>
-            <button onclick="location.href='question.html'">Yes?</button>
+            <button onclick="location.href='html/question.html'">Yes?</button>
         </div>
     </body>
 </html>
