--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>AJ I Have a Question</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="../css/index.css">
+        <link rel="stylesheet" type="text/css" href="css/index.css">
 
     </head>
     <body>
